2010-02-23
Started making API changes
Plugins are now required to register themselves with the system
Modules will soon be required to register a description
Plugins now are required to validate input, and the returned value if not blank should be used as the default
Plugins are required to have a register_<plugin name> as well as output_<plugin_name>
Removed some unnessicary validation from common.php
Removed validation from database.php, plugins now handle own validation
Fixed validation for select and IDs in select.php
Modules must re-validate only the request variables they depend on, if they are completely optional, no validation is needed

2010-02-22
Finished install.php admin script
	Now it saved the settings file, or prints it out in pretty colors
Fixed sizing problems in Live template

2010-02-17
Made modules more compatible with loading by requiring modules to INIT the includes they need before they use them, instead of when the module is loaded
	This way a module's information can be loaded and read (later including descriptions) without worrying about the dependencies
Worked on install.php script
	Now more self contained and handles errors more elegantly
	Finished database installation
Changed sql.php to database.php
	Created wrapper functions for ADOdb throughout script
Adding optional callback to install() function in database.php
Modules should not include_once their own module dependencies
	All other includes should be place in an init() function and called when needed
Created more setup functions in common.php for handling the reading of modules and tables
Removed MIME functionality from common.php
	Now fully relies on PEAR_MIME
System is becoming more reliant of PEAR_ERROR and will support more advanced debugging soon

2010-02-16
Created nifty install.php script
	Completely self contained, prints out style, and images that it needs
Added ADOdb to the includes
	This will be used by a database.php include that acts as a wrapper for ADOdb

2010-02-14