@@ -7,11 +7,11 @@
 
 RewriteEngine on
 
-RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)$ 									plugins/$1.php?search=$3 [L]
-RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)$ 							plugins/$1.php?cat=$3&id=$4 [L]
-RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)$ 					plugins/$1.php?cat=$3&id=$4&filename=$5 [L]
-RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 			plugins/$1.php?cat=$3&id=$4&$1=$5&filename=$6 [L]
-RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 	plugins/$1.php?cat=$3&id=$4&$1=$5&extra=$6&filename=$7 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)$ 									index.php?plugin=$1&search=$3 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)$ 							index.php?plugin=$1&cat=$3&id=$4 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)$ 					index.php?plugin=$1&cat=$3&id=$4&filename=$5 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 			index.php?plugin=$1&cat=$3&id=$4&$1=$5&filename=$6 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 	index.php?plugin=$1&cat=$3&id=$4&$1=$5&extra=$6&filename=$7 [L]
 
 RewriteRule ^admin/install\.php$													admin/install.php?modrewrite=true [QSA,L]
 
