@@ -4,9 +4,7 @@ Drupalish style coding
 	Plugins must register themselves just like the tools
 	Register directory structure so that only the top level plugin can be accessed for security
 	Register a name and description so they can be disabled in the admin panel
-	Could use stream_wrapper_register() like PHP API
-	More strealined way of plugins outputting data to template (assuming that $files is being used is no good)
-	Parse_ini_file() can be used to read plugin information
+	More streamlined way of plugins outputting data to template (assuming that $files is being used is no good)
 Request variables must also register themselves
 	The core requests will be defined in a core.php plugin
 	Must register a validate function or the variable is discarded completely
@@ -14,16 +12,13 @@ Request variables must also register themselves
 Modules should be the only access to the database, no more custom code like ampache plugin
 	Using a callback might make it faster
 	Should be more streamlined to provide quicker access like ampache plugin
-	Review and fix option request variables (eg. should the db_file::get() function always require a limit?)
 Create a developer plugin that verifies plugins register themselves and don't use query() function
 Doxygen compliant
 Speed testing with new User queries
 More compatibility testing with clients
 Test compatibility with PEAR_MIME modifications to common.php
 ------------- GENERAL TODO -------------
-Use ADOdb for all database activity?  Pear_MDB2?
-Implement PEAR::Error_Stack for error handling
-	Convert all log_error to PEAR_ERROR and add to debugging template
+Convert all log_error to PEAR_ERROR and add to debugging template
 Store the remote_address in the session, and if it doesn't match up with what is in the session then kill the session and die
 Create a unique id and insert it into forms, this is required when the form is submitted
 Make hard links and soft links, hard links are replaced when they are put in to the database, soft links are replaced when they are read from the database, this will allow us to do more network stuff
